Fix: Improve PDF viewer visibility on mobile devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1053,20 +1053,34 @@ p {
 }
 
 @media (max-width: 768px) {
+  .pdf-viewer-wrapper {
+    border-width: 1px;
+    margin-left: -15px;
+    margin-right: -15px;
+    width: calc(100% + 30px);
+    border-radius: 0;
+  }
+  
   .pdf-viewer {
-    height: 70vh;
-    min-height: 500px;
+    height: 85vh;
+    min-height: 600px;
+    width: 100%;
   }
 }
 
 @media (max-width: 576px) {
-  .pdf-viewer {
-    height: 60vh;
-    min-height: 400px;
+  .pdf-viewer-wrapper {
+    margin-left: -15px;
+    margin-right: -15px;
+    width: calc(100% + 30px);
+    border-left: none;
+    border-right: none;
   }
   
-  .pdf-viewer-wrapper {
-    border-width: 1px;
+  .pdf-viewer {
+    height: 90vh;
+    min-height: 500px;
+    width: 100%;
   }
 }
 
